IE9 svg overflow fix

--- a/src/css/_cartogram.scss
+++ b/src/css/_cartogram.scss
@@ -21,6 +21,7 @@
         height: 100%;
         -webkit-tap-highlight-color:rgba(0,0,0,0);
     }
+    svg:not(:root) { overflow: hidden; }
     * {
         cursor: pointer;
     }
